@@ -124,7 +124,10 @@ typedef std::list<CUpDownClient*> CClientPtrList;
 
 typedef std::vector<uint8>  ArrayOfUInts8;
 typedef std::vector<uint16> ArrayOfUInts16;
+typedef std::vector<uint32> ArrayOfUInts32;
 typedef std::vector<uint64> ArrayOfUInts64;
+
+typedef std::list<uint32>	ListOfUInts32;
 
 /* This is the Evil Void String For Returning On Const References From Hell */
 // IT MEANS I WANT TO USE IT EVERYWHERE. DO NOT MOVE IT. 
